# MiniMQ

./: Architecture.mmd  Dockerfile  LICENSE  Protocol_Specification.md  README.md  pom.xml
clients/java/mq-client-spring-boot-starter/: pom.xml
clients/java/mq-client-spring-boot-starter/src/main/java/io/github/jameswang777/minimq/autoconfigure/: MiniMqAutoConfiguration.java
clients/java/mq-client-spring-boot-starter/src/main/java/io/github/jameswang777/minimq/config/: MiniMqProperties.java
clients/java/mq-client-spring-boot-starter/src/main/java/io/github/jameswang777/minimq/connection/: ConnectionManager.java
clients/java/mq-client-spring-boot-starter/src/main/java/io/github/jameswang777/minimq/consumer/: Header.java  MessageWrapper.java  (+4 more)
clients/python/mq-client-python-package/: pyproject.toml
clients/python/mq-client-python-package/src/minimq_client/: __init__.py  client.py
common/: pom.xml
common/src/main/java/io/github/jameswang777/minimq/model/: Message.java
examples/example-java/: pom.xml
examples/example-java/src/main/java/io/github/jameswang777/minimq/example/: ExampleAppApplication.java  MessageListener.java  OrderDto.java  TestController.java
examples/example-java/src/main/resources/: application.properties
examples/example-python/: main.py  requirements.txt
mq-broker-server/: Dockerfile  pom.xml
mq-broker-server/src/main/java/io/github/jameswang777/minimq/: BrokerServer.java  ClientHandler.java
mq-broker-server/src/main/java/io/github/jameswang777/minimq/model/: Message.java
mq-broker-server/src/main/resources/: logback.xml
(+2 files in other folders)
