[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minimq_client"
version = "1.0.0"
authors = [
    { name="James Wang", email="jameswang777@163.com" },
]
description = "A Python client for the MiniMQ message queue system."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jameswang777/minimq"
"Bug Tracker" = "https://github.com/jameswang777/minimq/issues"
